@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Added max_payload_size to AnyEvent::WebSocket::Connection for limiting
+    the size of received frames
+  - Sending payloads larger than 65536 no longer causes an exception
 
 0.36      2016-10-27 11:57:12 -0400
   - Production version functionally identical to the 0.35_02 release.
